--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
     <title>Document</title>
   </head>
  <body>
- ...
+ <header></header>
+ <main>
+     <!-- my -->
+    <section></section>
+  <!-- kimhak -->
+  <section></section>
+  <!-- tong -->
+   <section></section>
+   <!-- vannda -->
+    <section></section>
+ </main>
+ <footer></footer>
   </body>
     <script src="asset/bootstrap-5.3.7/js/bootstrap.bundle.min.js"></script>
 
