--- a/index.html
+++ b/index.html
@@ -7,7 +7,124 @@
     <link rel="stylesheet" href="asset/css/theme.css">
     <link rel="stylesheet" href="asset/bootstrap-5.3.7/css/bootstrap.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <title>Document</title>
+    <style>
+        :root {
+            --bs-primary-rgb: 37, 99, 235;
+            --bs-primary: #2563eb;
+        }
+        .skill-card {
+            border-radius: 12px;
+            border-top: 3px solid var(--bs-primary);
+            transition: all 0.3s ease;
+        }
+
+        .skill-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.12);
+        }
+
+        .skill-header {
+            margin-bottom: 1.5rem;
+        }
+
+        .skill-icon {
+            width: 50px;
+            height: 50px;
+            background: #e8f0fe;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-right: 15px;
+        }
+
+        .skill-icon i {
+            font-size: 24px;
+            color: var(--bs-primary);
+        }
+
+        .skill-title {
+            font-size: 1.3rem;
+            font-weight: 600;
+            color: #2563eb;
+            margin: 0;
+        }
+
+        .skill-item {
+            margin-bottom: 1.25rem; /* A bit more than Bootstrap's mb-3 */
+        }
+
+        .skill-item:last-child {
+            margin-bottom: 0;
+        }
+
+        .progress {
+            height: 8px;
+            background-color: #e9ecef;
+            border-radius: 10px;
+            overflow: visible;
+        }
+
+        .progress-bar {
+            background: linear-gradient(90deg, var(--bs-primary), #1d4ed8);
+            border-radius: 10px;
+        }
+
+        .stat-item {
+            margin-bottom: 1.5rem; /* Corresponds to Bootstrap's mb-4 */
+        }
+
+        .stat-item:last-child {
+            margin-bottom: 0;
+        }
+
+        .stat-icon {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-right: 20px;
+            flex-shrink: 0;
+        }
+
+        .stat-icon i {
+            font-size: 24px;
+            color: white;
+        }
+
+        .stat-content h3 {
+            font-size: 1.8rem;
+            color: var(--bs-primary);
+            margin-bottom: 5px;
+        }
+
+        .stat-content p {
+            margin: 0;
+            color: #6c757d;
+            font-weight: 500;
+        }
+
+        .cert-badge {
+            padding: 10px 20px;
+            border-radius: 25px;
+            margin-right: 10px;
+            margin-bottom: 10px;
+            font-size: 0.9rem;
+            font-weight: 600;
+            transition: all 0.3s ease;
+        }
+
+        .cert-badge:hover {
+            background: #1d4ed8;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 10px rgba(37, 99, 235, 0.3);
+        }
+    </style>
   </head>
  <body>
  <header></header>
@@ -17,12 +134,235 @@
   <!-- kimhak -->
   <section></section>
   <!-- tong -->
-   <section></section>
+    <section>
+      <div class="container">
+        <h2 class="section-title text-center position-relative d-inline-block w-100 mb-2">Skills
+            <svg class="underline-wave w-25 d-flex justify-content-center mx-auto" viewBox="0 0 400 20" preserveAspectRatio="none">
+                <path d="M0,10 Q100,0 200,10 T400,10" fill="none" stroke="#2563eb" stroke-width="3"
+                    stroke-linecap="round" />
+            </svg>
+        </h2>
+        <p class="text-center text-muted mb-5">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit
+        </p>
+
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="row g-5">
+                    <!-- Frontend Development -->
+                    <div class="col-md-6 mb-4 mb-md-0">
+                        <div class="skill-card bg-white p-4 shadow-sm rounded-4">
+                            <div class="skill-header d-flex align-items-center">
+                                    <div class="skill-icon">
+                                        <i class="fas fa-code"></i>
+                                    </div>
+                                    <h3 class="skill-title text-dark text-center">Frontend Development</h3>
+                                </div>
+                                <div class="skill-item">
+                                    <div class="skill-name">
+                                        <div class="d-flex justify-content-between mb-2 fw-semibold text-dark">
+                                            <span>HTML/CSS</span>
+                                            <span class="text-primary fw-bold">95%</span>
+                                        </div>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" style="width: 95%"></div>
+                                    </div>
+                                </div>
+                                <div class="skill-item">
+                                    <div class="d-flex justify-content-between mb-2 fw-semibold text-dark">
+                                        <span>JavaScript</span>
+                                        <span class="text-primary fw-bold">95%</span>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" style="width: 95%"></div>
+                                    </div>
+                                </div>
+                                <div class="skill-item">
+                                    <div class="d-flex justify-content-between mb-2 fw-semibold text-dark">
+                                        <span>Vue.js</span>
+                                        <span class="text-primary fw-bold">95%</span>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" style="width: 95%"></div>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+
+                    <!-- Backend Development -->
+                    <div class="col-md-6 mb-4 mb-md-0">
+                        <div class="skill-card bg-white p-4 shadow-sm rounded-4">
+                            <div class="skill-header d-flex align-items-center">
+                                    <div class="skill-icon">
+                                        <i class="fas fa-database"></i>
+                                    </div>
+                                    <h3 class="skill-title">Backend Development</h3>
+                                </div>
+                                <div class="skill-item">
+                                    <div class="d-flex justify-content-between mb-2 fw-semibold text-dark">
+                                        <span>PHP</span>
+                                        <span class="text-primary fw-bold">95%</span>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" style="width: 95%"></div>
+                                    </div>
+                                </div>
+                                <div class="skill-item">
+                                    <div class="d-flex justify-content-between mb-2 fw-semibold text-dark">
+                                        <span>Laravel</span>
+                                        <span class="text-primary fw-bold">95%</span>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" style="width: 95%"></div>
+                                    </div>
+                                </div>
+                                <div class="skill-item">
+                                    <div class="d-flex justify-content-between mb-2 fw-semibold text-dark">
+                                        <span>MySQL</span>
+                                        <span class="text-primary fw-bold">95%</span>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" style="width: 95%"></div>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                    <!-- Design & Tools -->
+                    <div class="col-md-6 mb-4 mb-md-0">
+                        <div class="skill-card bg-white p-4 shadow-sm rounded-4">
+                            <div class="skill-header d-flex align-items-center">
+                                    <div class="skill-icon">
+                                        <i class="fas fa-palette"></i>
+                                    </div>
+                                    <h3 class="skill-title">Design & Tools</h3>
+                                </div>
+                                <div class="skill-item">
+                                    <div class="d-flex justify-content-between mb-2 fw-semibold text-dark">
+                                        <span>Figma</span>
+                                        <span class="text-primary fw-bold">95%</span>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" style="width: 95%"></div>
+                                    </div>
+                                </div>
+                                <div class="skill-item">
+                                    <div class="d-flex justify-content-between mb-2 fw-semibold text-dark">
+                                        <span>Photoshop</span>
+                                        <span class="text-primary fw-bold">95%</span>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" style="width: 95%"></div>
+                                    </div>
+                                </div>
+                                <div class="skill-item">
+                                    <div class="d-flex justify-content-between mb-2 fw-semibold text-dark">
+                                        <span>Illustrator</span>
+                                        <span class="text-primary fw-bold">95%</span>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" style="width: 95%"></div>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+
+                    <!-- Cloud & DevOps -->
+                    <div class="col-md-6 mb-4 mb-md-0">
+                        <div class="skill-card bg-white p-4 shadow-sm rounded-4">
+                            <div class="skill-header d-flex align-items-center">
+                                    <div class="skill-icon">
+                                        <i class="fas fa-cloud"></i>
+                                    </div>
+                                    <h3 class="skill-title">Cloud & DevOps</h3>
+                                </div>
+                                <div class="skill-item">
+                                    <div class="d-flex justify-content-between mb-2 fw-semibold text-dark">
+                                        <span>AWS</span>
+                                        <span class="text-primary fw-bold">95%</span>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" style="width: 95%"></div>
+                                    </div>
+                                </div>
+                                <div class="skill-item">
+                                    <div class="d-flex justify-content-between mb-2 fw-semibold text-dark">
+                                        <span>Docker</span>
+                                        <span class="text-primary fw-bold">95%</span>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" style="width: 95%"></div>
+                                    </div>
+                                </div>
+                                <div class="skill-item">
+                                    <div class="d-flex justify-content-between mb-2 fw-semibold text-dark">
+                                        <span>Git</span>
+                                        <span class="text-primary fw-bold">95%</span>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" style="width: 95%"></div>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Professional Expertise -->
+            <div class="col-lg-4">
+                <div class="expertise-card bg-white p-4 shadow-sm rounded-4 h-100">
+                    <h3 class="expertise-title fs-4 fw-bold text-dark mb-3">Professional Expertise</h3>
+                    <p class="expertise-text text-muted lh-lg mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+
+                    <div class="stat-item d-flex align-items-center">
+                        <div class="stat-icon bg-primary">
+                            <i class="fas fa-trophy"></i>
+                        </div>
+                        <div class="stat-content">
+                            <h3 class="fw-bold">5+</h3>
+                            <p class="text-muted">Years Experience</p>
+                        </div>
+                    </div>
+
+                    <div class="stat-item d-flex align-items-center">
+                        <div class="stat-icon bg-primary">
+                            <i class="fas fa-briefcase"></i>
+                        </div>
+                        <div class="stat-content">
+                            <h3 class="fw-bold">50+</h3>
+                            <p class="text-muted">Project Completed</p>
+                        </div>
+                    </div>
+
+                    <div class="stat-item d-flex align-items-center">
+                        <div class="stat-icon bg-primary">
+                            <i class="fas fa-users"></i>
+                        </div>
+                        <div class="stat-content">
+                            <h3 class="fw-bold">30+</h3>
+                            <p class="text-muted">Happy Clients</p>
+                        </div>
+                    </div>
+                    <div class="mt-4">
+                        <h3 class="certifications-title fs-5 fw-bold text-dark mb-3">Certifications</h3>
+                        <div class="d-flex flex-wrap">
+                            <span class="cert-badge bg-primary text-white">AWS Certified</span>
+                            <span class="cert-badge bg-primary text-white">Vue.js Developer</span>
+                            <span class="cert-badge bg-primary text-white">Laravel Expert</span>
+                            <span class="cert-badge bg-primary text-white">UI/UX Design</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </section>
    <!-- vannda -->
     <section></section>
  </main>
  <footer></footer>
   </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
     <script src="asset/bootstrap-5.3.7/js/bootstrap.bundle.min.js"></script>
 
  
