--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>Document</title>
 </head>
-
 <body>
- <header>
+ <header class="">
    <nav class="navbar navbar-expand-lg site-header">
      <div class="container">
        <a class="navbar-brand site-logo" href="#">ENOLA</a>
@@ -36,19 +35,14 @@
  <main>
     <!-- kimhak about-->
     <section class="bg-info-subtle py-10">
-
       <div class="container">
-        <h1 class="text-center text-dark">About</h1>
-
+        <h1 class="text-center text-dark" id="about" >About</h1>
         <svg viewBox="0 0 200 20" xmlns="http://www.w3.org/2000/svg">
                 <path d="M 0,10 C 40,0 60,20 100,10 C 140,0 160,20 200,10" fill="none" stroke="currentColor" stroke-width="2"></path>
               </svg>
-
         <p class="text-center text-dark">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id, architecto animi <br>
           laudantium excepturi rerum
           voluptates omnis aut ab minima repellat!</p>
-
-
         <div class="row">
           <div class="col-md-6 p-10">
             <img src="asset/img/portrait.jpg" class="img-fluid rounded-5" alt="">
@@ -60,14 +54,8 @@
               labore fugit error,
               praesentium dolore vitae asperiores eligendi ipsam molestias omnis! Iure aliquam excepturi, eaque
               veritatis aut itaque sed animi, dolores perferendis velit corporis facilis</p>
-
             <h4 class="text-dark fw-bold p-3">Lorem ipsum dolor sit amet consectetur </h4>
-
-
-
             <div class="row p-3 bg-light g-3 rounded-4 " data-aos="fade-up">
-
-
               <div class="col-6">
                 <div class="card p-3">
                   <div class="d-flex align-items-center">
@@ -150,9 +138,6 @@
 
     </section>
 
-
-
-
     <!-- tong -->
     <section></section>
     <!-- vannda -->
@@ -204,8 +189,7 @@
 </footer>
 
   </body>
-    <script src="asset/bootstrap-5.3.7/js/bootstrap.bundle.min.js"></script>
-
+<script src="asset/bootstrap-5.3.7/js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
  <script>
   AOS.init();
