--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="asset/css/theme.css">
   <link rel="stylesheet" href="asset/bootstrap-5.3.7/css/bootstrap.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
   <title>Document</title>
   <link rel="stylesheet" href="asset/css/project.css">
 </head>
@@ -22,11 +23,10 @@
        <div class="collapse navbar-collapse justify-content-end" id="mainNav">
          <ul class="site-nav navbar-nav ms-auto  ">
            <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
-           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-           <li class="nav-item"><a class="nav-link" href="#skill">Skill</a></li>
-           <li class="nav-item"><a class="nav-link" href="#project">Project</a></li>
-           <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
-           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+           <li class="nav-item"><a class="nav-link " href="#about">About</a></li>
+           <li class="nav-item"><a class="nav-link " href="#skill">Skill</a></li>
+           <li class="nav-item"><a class="nav-link " href="#project">Project</a></li>
+           <li class="nav-item"><a class="nav-link " href="#resume">Resume</a></li>
          </ul>
        </div>
      </div>
@@ -202,9 +202,9 @@
     </section>
   <section></section>
   <!-- tong -->
-    <section>
+    <section class="py-10" id="skill">
       <div class="container">
-        <h2 class="section-title text-center position-relative d-inline-block w-100 mb-2">Skills
+        <h2 class="section-title text-center position-relative d-inline-block w-100 mb-2 text-black">Skills
             <svg class="underline-wave w-25 d-flex justify-content-center mx-auto" viewBox="0 0 400 20" preserveAspectRatio="none">
                 <path d="M0,10 Q100,0 200,10 T400,10" fill="none" stroke="#2563eb" stroke-width="3"
                     stroke-linecap="round" />
@@ -429,7 +429,7 @@
       <section >
       <div class="container">
         <div class="title-container">
-          <h1 class="text-center">Project</h1>
+          <h1 class="text-center text-black" id="project">Project</h1>
           <svg class="underline-wave w-25 d-flex justify-content-center mx-auto" viewBox="0 0 400 20"
             preserveAspectRatio="none">
             <path d="M0,10 Q100,0 200,10 T400,10" fill="none" stroke="#2563eb" stroke-width="3"
