--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="asset/css/project.css">
 </head>
 <body>
- <header class="">
+ <header class="header">
    <nav class="navbar navbar-expand-lg site-header">
      <div class="container">
        <a class="navbar-brand site-logo" href="#">ENOLA</a>
